--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>eu.darkbot.popcorn.def</groupId>
-    <artifactId>DefaultPlugin</artifactId>
+    <groupId>com.meritakete</groupId>
+    <artifactId>PruebaPlugin</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>eu.darkbot.DarkBotAPI</groupId>
             <artifactId>darkbot-common</artifactId>
-            <version>0.5.4</version>
+            <version>0.7.1</version>
         </dependency>
 
 
